# AVS.AI.Blueprint.NanoService

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  score.deploy.yml  score.yml
.windsurf/rules/: ai-assisted-coding.md  architecture-guidelines.md  documentation-standards.md  error-handling.md  testing-rules.md
config/: config.json
src/: README.md  __init__.py  app.py
src/api/: __init__.py  actuator_controller.py
src/clients/: README.md  __init__.py
src/common/model/dto/: actuator.py
src/config/: README.md  __init__.py  config.py  logs.py  params.py
src/controller/: README.md  __init__.py  actuator_controller.py  base_controller.py  echo_controller.py  start_controller.py
src/controller/blueprint/: __init__.py  actuator_controller.py  mcp_controller.py  start_controller.py
src/controller/dto/: actuator.py  base.py  echo.py
src/models/: README.md  __init__.py  domain.py
src/models/blueprint/: __init__.py  errors.py
src/repositories/: README.md  __init__.py
src/services/: README.md  __init__.py  echo_service.py
